--- a/app/globals.css
+++ b/app/globals.css
@@ -7,12 +7,19 @@
 .app-container {
   display: flex;
   background-color: green;
+  position: relative; 
 }
 
 .sidebar-container {
+  height: 100vh;
+  width: 500px; 
   background-color: purple;
+  position: fixed; 
 }
 
 .main-container {
-  background-color: green;
+  background-color: blue;
+  width: 500px !important; 
+  align-self: flex-end;
+  margin-left: 500px; 
 }
