--- a/app/globals.css
+++ b/app/globals.css
@@ -1,25 +1,36 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0; 
+  padding: 0;
+  color: #fff;
+  background-color: #0f182c;
+}
+
+h2 {
+  font-size: 30px;
+  text-align: center; 
 }
 
 .app-container {
   display: flex;
-  background-color: green;
-  position: relative; 
+
+  position: relative;
 }
 
 .sidebar-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
-  width: 500px; 
-  background-color: purple;
-  position: fixed; 
+  width: 30%;
+
+  position: fixed;
+  top: 0; /* Add top: 0 to fix the sidebar at the top */
+  left: 0; /* Add left: 0 to fix the sidebar at the left */
 }
 
 .main-container {
-  background-color: blue;
-  width: 500px !important; 
-  align-self: flex-end;
-  margin-left: 500px; 
+  width: 100% !important;
+  margin-left: 30%; /* Add margin-left to push the main container to the right of the sidebar */
 }
