--- a/app/components/Contact/styles.module.css
+++ b/app/components/Contact/styles.module.css
@@ -1,5 +1,5 @@
 .footer_container {
-  display: flex; 
+  display: flex;
 }
 
 .contact_container {
@@ -25,6 +25,8 @@
 }
 
 .message_container {
+  display: flex;
+  flex-direction: column;
   width: 400px;
   /* textarea:focus,
   input:focus {
@@ -32,10 +34,47 @@
   } */
 }
 
+.email_container {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+
 .form_label {
   color: white;
+  margin-bottom: 10px;
 }
 
 .email_input {
-  border: 3px solid #000;
+  padding: 10px 30px 10px 4px;
+  border: 1px solid gray;
+  border-radius: 4px;
+}
+
+.message {
+  margin: 10px;
+}
+
+.message_submit_container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 200px;
+}
+
+.textarea {
+  resize: none;
+  height: 200px;
+  padding: 6px;
+  border: 1px solid gray;
+  border-radius: 4px;
+  font-family:Arial, Helvetica, sans-serif;
+}
+
+.submit_btn {
+  padding: 10px 30px;
+  margin-top: 10px;
+  border-radius: 4px;
+  width: 145px;
+  text-align: center;
 }
